<resources>
    <string name="app_name">USB\nMonitor</string>
    <string name="Temp">Temp.</string>
    <string name="Humidity">Humidity</string>
    <string name="CO2">CO2</string>
    <string name="CO">CO</string>
    <string name="Pressure">Pressure</string>
    <string name="PM2_5">PM2.5</string>
    <string name="PM10">PM10</string>
    <string name="Noise">Noise</string>
    <string name="Flow">Flow</string>
    <string name="Proportional">PROPO</string>
    <string name="Level">LEVEL</string>

    <string name="connectedDevice">Connected Device</string>
    <string name="successConnected">Success Connected!</string>
    <string name="disConnectedDevice">DisConnected Device</string>
    <string name="tryConnect">Try to connect..</string>
    <string name="gettingDeviceInfo">Getting device information</string>
    <string name="pleaseInputDevice">Please pull in the sensor.</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="record_history">Record history</string>
    <string name="setting">Setting</string>
    <string name="advise">Advise</string>

    <string name="timeMeasrue">Measure Time</string>
    <string name="sensorHasBeenPullOut">Sensor has been pull out</string>
    <string name="sensorPullIn">Pull in</string>
    <string name="autoMeasure">Auto measure</string>
    <string name="autoMeasuringButton">Auto\nmeasuring</string>
    <string name="measureButton">Measure</string>
    <string name="autoMeasureOpenLabel">Turn on the auto measurement</string>
    <string name="autoMeasureTurnOff">Turn off the auto measurement</string>

    <string name="PV">offset</string>
    <string name="EH">High Alarm</string>
    <string name="EL">Low Alarm</string>
    <string name="C2F">Trans to F</string>

    <string name="factoryReset">Factory Reset</string>
    <string name="nightMode">Night Mode</string>
    <string name="cancelButton">Cancel</string>
    <string name="notice_AlarmTitle">Notice</string>
    <string name="oK_Button">OK</string>
    <string name="progressing">Progressing</string>
    <string name="progressDialogMessage">Please wait..</string>
    <string name="factoryResetCheckMessage">It will RESET all of custom setting,continue?</string>
    <string name="noSensorHint">Need pull in sensor</string>
    <string name="unfilled">unfilled</string>
    <string name="tester">Tester: </string>
    <string name="deviceId">"Device ID: "</string>
    <string name="deviceName">"Device Name: "</string>
    <string name="measureTime">"Measure time: "</string>
    <string name="measureValue">"Measure value: "</string>
    <string name="write_data">Write data</string>
    <string name="recorder">Tester:</string>
    <string name="date_time">Date-Time</string>
    <string name="note">Note</string>
    <string name="please_input">Please input...</string>
    <string name="record_data">Record Data</string>
    <string name="save">Save</string>
    <string name="flashSavetoNote">By flash save.</string>
    <string name="saving">Saving..</string>
    <string name="succesSaved">Success saved!</string>
    <string name="successModify">Success modified</string>
    <string name="noImageWasTaken">No image was taken</string>
    <string name="lockTester">Lock Tester</string>
    <string name="changePassword">Change Password</string>
    <string name="changeTester">Change Tester</string>
    <string name="changeDeviceName">Change DeviceName</string>
    <string name="pleaseSelectSpinner">---Please select---</string>
    <string name="searchBytUUIDLabel">Search By Device ID</string>
    <string name="searchByDaviceNameLabel">Search By Device Name</string>
    <string name="searchByTester">Search By Tester</string>
    <string name="searchByDate">Search By Date</string>
    <string name="resultFilter">Result filter</string>
    <string name="tooLongInput">Input was too long!Please less as 15 word</string>
    <string name="dontBlank">Do not blank!</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="oldPasswordIsWrong">The old Password is wrong!</string>
    <string name="inputNewPasswordHint">Please input New Password...</string>
    <string name="inputOldPasswordHint">Please input Old Password...</string>
    <string name="pswIsWrong">Wrong password</string>
    <string name="pleaseInput">Please input...</string>
    <string name="plzInputPassword">Please input the password</string>
    <string name="plzInputChangeTester">Please input new TesterName</string>
    <string name="IH">High Range</string>
    <string name="IL">Low Range</string>
    <string name="delete">Delete</string>
    <string name="review">Review</string>
    <string name="modify">Modify</string>

    <string name="flashSave">Flash save</string>
    <string name="sensor_setting">Sensor Setting</string>
    <string name="application_setting">Application Setting</string>

</resources>
