<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recordHistory"
        android:title="@string/record_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Setting"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Advise"
        android:title="@string/advise"
        app:showAsAction="never" />
    <item
        android:title="@string/autoMeasure"
        app:showAsAction="never">
        <group android:checkableBehavior="all">
            <item android:title="@string/autoMeasure"
                android:checked="true"
                android:id="@+id/action_Auto"
                />

        </group>

    </item>
</menu>